--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SigninActivity">
+        <activity
+            android:name=".activity.SigninActivity"
+            android:label="Welcome">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.SignupActivity"></activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="Linky" />
+        <activity
+            android:name=".activity.SignupActivity"
+            android:label="Sign Up" />
     </application>
 
 </manifest>
